--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "postcss": "^8.4.5",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^3.5.0",
+    "framer-motion": "^10.12.16",
+    "recharts": "^2.5.0",
+    "@react-three/fiber": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "24.10.1",
